--- a/configure.in
+++ b/configure.in
@@ -52,6 +52,7 @@ case "$host" in
 		AC_MSG_RESULT(yes)
 		AC_DEFINE(HAVE_HPUX_TRUSTED_SYSTEM_PW)
 		LIBS="$LIBS -lsec"
+		AC_MSG_WARN([This configuration is untested])
 	else
 		AC_MSG_RESULT(no)
 		AC_DEFINE(DISABLE_SHADOW)
@@ -59,6 +60,9 @@ case "$host" in
 	;;
 *-*-solaris*)
 	AC_DEFINE(USE_UTMPX)
+	;;
+*-*-aix*)
+	AFS_LIBS="-lld"
 	;;
 *-*-irix5*)
 	no_libsocket=1
@@ -400,23 +404,56 @@ AC_TRY_LINK([],
 
 dnl Check whether user wants Kerberos support
 AC_ARG_WITH(kerberos4,
-	[  --with-kerberos4        Enable Kerberos 4 support],
+	[  --with-kerberos4=PATH   Enable Kerberos 4 support],
 	[
 		if test "x$withval" != "$xno" ; then
+	
+			if test "x$withval" != "$xyes" ; then
+				CFLAGS="$CFLAGS -I${withval}/include"
+				LDFLAGS="$LDFLAGS -L${withval}/lib"
+			else
+				if test -d /usr/include/kerberosIV ; then
+					CFLAGS="$CFLAGS -I/usr/include/kerberosIV"
+				fi
+			fi
+
+			AC_CHECK_HEADERS(krb.h)
+			AC_CHECK_LIB(krb, main)
+			if test "$ac_cv_header_krb_h" != yes; then
+				AC_MSG_WARN([Cannot find krb.h, build may fail])
+			fi
+			if test "$ac_cv_lib_krb_main" != yes; then
+				AC_MSG_WARN([Cannot find libkrb, build may fail])
+			fi
+
+			LIBS="$LIBS -lkrb -ldes"
+			AC_CHECK_LIB(resolv, dn_expand, , )
+			KRB4=yes
 			AC_DEFINE(KRB4)
-			LIBS="$LIBS -lkrb"
-			CFLAGS="$CFLAGS -I/usr/include/kerberosIV"
 		fi
 	]
 )
 
 dnl Check whether user wants AFS support
 AC_ARG_WITH(afs,
-	[  --with-afs              Enable AFS support],
+	[  --with-afs=PATH         Enable AFS support],
 	[
 		if test "x$withval" != "$xno" ; then
-			AC_DEFINE(AFS)
+
+			if test "x$withval" != "$xyes" ; then
+				CFLAGS="$CFLAGS -I${withval}/include"
+				LFLAGS="$LFLAGS -L${withval}/lib"
+			fi
+
+			if test -z "$KRB4" ; then
+				AC_MSG_WARN([AFS requires Kerberos IV support, build may fail])
+			fi
+
 			LIBS="$LIBS -lkafs"
+			if test ! -z "$AFS_LIBS" ; then
+				LIBS="$LIBS $AFS_LIBS"
+			fi
+			AC_DEFINE(AFS)
 		fi
 	]
 )
@@ -438,11 +475,10 @@ AC_ARG_WITH(tcp-wrappers,
 	[
 		if test "x$withval" != "$xno" ; then
 			AC_DEFINE(LIBWRAP)
-			LIBWRAP="-lwrap"
+			LIBS="$LIBS -lwrap"
 		fi
 	]
 )
-AC_SUBST(LIBWRAP)
 
 dnl Check whether to enable MD5 passwords
 AC_ARG_WITH(md5-passwords,
