- Fix --with-ipaddr-display option test. Fix from Jarno Huuskonen    <jhuuskon@hytti.uku.fi>

--- a/configure.in
+++ b/configure.in
@@ -636,7 +636,7 @@ dnl Use ip address instead of hostname in $DISPLAY
 AC_ARG_WITH(ipaddr-display,
 	[  --with-ipaddr-display   Use ip address instead of hostname in \$DISPLAY],
 	[
-		if test "x$withval" = "xno" ; then	
+		if test "x$withval" != "xno" ; then	
 			AC_DEFINE(IPADDR_IN_DISPLAY)
 		fi
 	]
