--- a/Makefile.in
+++ b/Makefile.in
@@ -5,15 +5,15 @@ sbindir=@sbindir@
 libexecdir=@libexecdir@
 mandir=@mandir@
 sysconfdir=@sysconfdir@
+piddir=@piddir@
+srcdir=@srcdir@
+top_srcdir=@top_srcdir@
 
-srcdir = @srcdir@
-top_srcdir = @top_srcdir@
 VPATH=@srcdir@
 
 SSH_PROGRAM=@bindir@/ssh
 ASKPASS_LOCATION=@libexecdir@/ssh
 ASKPASS_PROGRAM=$(ASKPASS_LOCATION)/ssh-askpass
-FIXPATHS=@top_srcdir@/fixpaths
 
 CC=@CC@
 PATHS=-DETCDIR=\"$(sysconfdir)\" -DSSH_PROGRAM=\"$(SSH_PROGRAM)\" -DSSH_ASKPASS_DEFAULT=\"$(ASKPASS_PROGRAM)\"
@@ -24,6 +24,7 @@ AR=@AR@
 RANLIB=@RANLIB@
 INSTALL=@INSTALL@
 PERL=@PERL@
+FIXPATHS=$(PERL) @top_srcdir@/fixpaths -Dsysconfdir=${sysconfdir} -Dpiddir=${piddir}
 LDFLAGS=-L. @LDFLAGS@
 
 GNOME_CFLAGS=`gnome-config --cflags gnome gnomeui`
@@ -73,28 +74,28 @@ gnome-ssh-askpass: gnome-ssh-askpass.c
 	$(CC) $(CFLAGS) $(GNOME_CFLAGS) -o $@ gnome-ssh-askpass.c $(GNOME_LIBS)
 
 scp.1: scp.1.in
-	$(PERL) $(FIXPATHS) -Dsysconfdir=${sysconfdir} $(srcdir)/scp.1.in
+	$(FIXPATHS) $(srcdir)/scp.1.in
 
 ssh-add.1: ssh-add.1.in
-	$(PERL) $(FIXPATHS) -Dsysconfdir=${sysconfdir} ssh-add.1.in
+	$(FIXPATHS) ssh-add.1.in
 
 ssh-agent.1: ssh-agent.1.in
-	$(PERL) $(FIXPATHS) -Dsysconfdir=${sysconfdir} ssh-agent.1.in
+	$(FIXPATHS) ssh-agent.1.in
 
 ssh-keygen.1: ssh-keygen.1.in
-	$(PERL) $(FIXPATHS) -Dsysconfdir=${sysconfdir} ssh-keygen.1.in
+	$(FIXPATHS) ssh-keygen.1.in
 
 ssh.1: ssh.1.in
-	$(PERL) $(FIXPATHS) -Dsysconfdir=${sysconfdir} ssh.1.in
+	$(FIXPATHS) ssh.1.in
 
 sshd.8: sshd.8.in
-	$(PERL) $(FIXPATHS) -Dsysconfdir=${sysconfdir} sshd.8.in
+	$(FIXPATHS) sshd.8.in
 
 sshd_config: sshd_config.in
-	$(PERL) $(FIXPATHS) -Dsysconfdir=${sysconfdir} sshd_config.in
+	$(FIXPATHS) sshd_config.in
 
 ssh_config: ssh_config.in
-	$(PERL) $(FIXPATHS) -Dsysconfdir=${sysconfdir} ssh_config.in
+	$(FIXPATHS) ssh_config.in
 
 clean:
 	rm -f *.o *.a $(TARGETS) config.status config.cache config.log 
@@ -172,3 +173,7 @@ uninstall:
 	-rm -f ${ASKPASS_PROGRAM}
 	-rmdir $(libexecdir)/ssh ;
 
+preformat:
+	-rm -f catman
+	-mkdir catman
+	for x in $(MANPAGES) ; do man ./$${x}.in > catman/$${x}.in ; done
