- Compile fix for HPUX and Solaris from Andre Lucas    <andre.lucas@dial.pipex.com>

--- a/configure.in
+++ b/configure.in
@@ -157,6 +157,7 @@ AC_CHECK_FUNC(daemon,
 )
 
 dnl Checks for data types
+AC_CHECK_SIZEOF(char, 1)
 AC_CHECK_SIZEOF(short int, 2)
 AC_CHECK_SIZEOF(int, 4)
 AC_CHECK_SIZEOF(long int, 4)
