--- a/Makefile.in
+++ b/Makefile.in
@@ -4,6 +4,7 @@ bindir=@bindir@
 sbindir=@sbindir@
 libexecdir=@libexecdir@
 mandir=@mandir@
+mansubdir=@mansubdir@
 sysconfdir=@sysconfdir@
 piddir=@piddir@
 srcdir=@srcdir@
@@ -37,7 +38,9 @@ SSHOBJS= ssh.o sshconnect.o log-client.o readconf.o clientloop.o
 
 SSHDOBJS= sshd.o auth-rhosts.o auth-krb4.o auth-pam.o auth-passwd.o auth-rsa.o auth-rh-rsa.o pty.o log-server.o login.o servconf.o serverloop.o bsd-login.o md5crypt.o
 
-MANPAGES	= scp.1 ssh-add.1 ssh-agent.1 ssh-keygen.1 ssh.1 sshd.8
+TROFFMAN	= scp.1 ssh-add.1 ssh-agent.1 ssh-keygen.1 ssh.1 sshd.8
+CATMAN		= scp.0 ssh-add.0 ssh-agent.0 ssh-keygen.0 ssh.0 sshd.0
+MANPAGES	= @MANTYPE@
 
 CONFIGFILES=sshd_config ssh_config
 
@@ -87,30 +90,37 @@ distclean: clean
 mrproper: distclean
 
 veryclean: distclean
-	rm -f configure config.h.in
+	rm -f configure config.h.in *.0
+
+catman-do:
+	@for f in $(TROFFMAN) ; do \
+		echo "$$f -> $${f%%.[18]}.0" ; \
+		nroff -mandoc $$f | cat -v | sed -e 's/.\^H//g' \
+			>$${f%%.[18]}.0 ; \
+	done
 
 install: $(TARGETS)
 	$(INSTALL) -d $(bindir)
 	$(INSTALL) -d $(sbindir)
 	$(INSTALL) -d $(mandir)
-	$(INSTALL) -d $(mandir)/man1
-	$(INSTALL) -d $(mandir)/man8
+	$(INSTALL) -d $(mandir)/$(mansubdir)1
+	$(INSTALL) -d $(mandir)/$(mansubdir)8
 	$(INSTALL) -s ssh $(bindir)/ssh
 	$(INSTALL) -s scp $(bindir)/scp
 	$(INSTALL) -s ssh-add $(bindir)/ssh-add
 	$(INSTALL) -s ssh-agent $(bindir)/ssh-agent
 	$(INSTALL) -s ssh-keygen $(bindir)/ssh-keygen
 	$(INSTALL) -s sshd $(sbindir)/sshd
-	$(INSTALL) -m 644 ssh.1.out $(mandir)/man1/ssh.1
-	$(INSTALL) -m 644 scp.1.out $(mandir)/man1/scp.1
-	$(INSTALL) -m 644 ssh-add.1.out $(mandir)/man1/ssh-add.1
-	$(INSTALL) -m 644 ssh-agent.1.out $(mandir)/man1/ssh-agent.1
-	$(INSTALL) -m 644 ssh-keygen.1.out $(mandir)/man1/ssh-keygen.1
-	$(INSTALL) -m 644 sshd.8.out $(mandir)/man8/sshd.8
+	$(INSTALL) -m 644 ssh.[01].out $(mandir)/$(mansubdir)1/ssh.1
+	$(INSTALL) -m 644 scp.[01].out $(mandir)/$(mansubdir)1/scp.1
+	$(INSTALL) -m 644 ssh-add.[01].out $(mandir)/$(mansubdir)1/ssh-add.1
+	$(INSTALL) -m 644 ssh-agent.[01].out $(mandir)/$(mansubdir)1/ssh-agent.1
+	$(INSTALL) -m 644 ssh-keygen.[01].out $(mandir)/$(mansubdir)1/ssh-keygen.1
+	$(INSTALL) -m 644 sshd.[08].out $(mandir)/$(mansubdir)8/sshd.8
 	-rm -f $(bindir)/slogin
 	ln -s ssh $(bindir)/slogin
-	-rm -f $(mandir)/man1/slogin.1
-	ln -s ssh.1 $(mandir)/man1/slogin.1
+	-rm -f $(mandir)/$(mansubdir)1/slogin.1
+	ln -s ssh.1 $(mandir)/$(mansubdir)1/slogin.1
 
 	if [ ! -z "@GNOME_ASKPASS@" ] ; then \
 		$(INSTALL) -d $(libexecdir) ; \
@@ -130,8 +140,8 @@ uninstallall:	uninstall
 	-rmdir $(sysconfdir)
 	-rmdir $(bindir)
 	-rmdir $(sbindir)
-	-rmdir $(mandir)/man1
-	-rmdir $(mandir)/man8
+	-rmdir $(mandir)/$(mansubdir)1
+	-rmdir $(mandir)/$(mansubdir)8
 	-rmdir $(mandir)
 	-rmdir $(libexecdir)
 
@@ -142,18 +152,13 @@ uninstall:
 	-rm -f $(bindir)/ssh-agent
 	-rm -f $(bindir)/ssh-keygen
 	-rm -f $(sbindir)/sshd
-	-rm -f $(mandir)/man1/ssh.1
-	-rm -f $(mandir)/man1/scp.1
-	-rm -f $(mandir)/man1/ssh-add.1
-	-rm -f $(mandir)/man1/ssh-agent.1
-	-rm -f $(mandir)/man1/ssh-keygen.1
-	-rm -f $(mandir)/man8/sshd.8
+	-rm -f $(mandir)/$(mansubdir)1/ssh.1
+	-rm -f $(mandir)/$(mansubdir)1/scp.1
+	-rm -f $(mandir)/$(mansubdir)1/ssh-add.1
+	-rm -f $(mandir)/$(mansubdir)1/ssh-agent.1
+	-rm -f $(mandir)/$(mansubdir)1/ssh-keygen.1
+	-rm -f $(mandir)/$(mansubdir)8/sshd.8
 	-rm -f $(bindir)/slogin
-	-rm -f $(mandir)/man1/slogin.1
+	-rm -f $(mandir)/$(mansubdir)1/slogin.1
 	-rm -f ${ASKPASS_PROGRAM}
 	-rmdir $(libexecdir)/ssh ;
-
-preformat:
-	-rm -f catman
-	-mkdir catman
-	for x in $(MANPAGES) ; do man ./$${x}.in > catman/$${x}.in ; done
