- Use preformatted manpages on SCO, report from Gary E. Miller    <gem@rellim.com>  - New URL for x11-ssh-askpass.

--- a/configure.in
+++ b/configure.in
@@ -125,6 +125,9 @@ case "$host" in
 	AC_DEFINE(USE_UTMPX)
 	;;
 *-*-sysv*)
+	AC_DEFINE(USE_UTMPX)
+	MANTYPE='$(CATMAN)'
+	mansubdir=cat
 	LIBS="$LIBS -lgen -lsocket"
 	;;
 esac
