--- a/configure.in
+++ b/configure.in
@@ -487,7 +487,7 @@ AC_ARG_WITH(lastlog,
 	],
 	[
 		AC_MSG_CHECKING([location of lastlog file])
-		for lastlog in /var/log/lastlog /var/adm/lastlog /etc/security/lastlog ; do
+		for lastlog in /var/log/lastlog /var/adm/lastlog /usr/adm/lastlog  /etc/security/lastlog ; do
 			if test -f $lastlog ; then
 				gotlastlog="file"
 				break
