- Added note in UPGRADING re interop with commercial SSH using idea.    Report from Jim Knoble <jmknoble@pobox.com>  - Fix linking order for Kerberos/AFS. Fix from Holget Trapp    <Holger.Trapp@Informatik.TU-Chemnitz.DE>

--- a/configure.in
+++ b/configure.in
@@ -630,7 +630,7 @@ AC_ARG_WITH(kerberos4,
 				AC_MSG_WARN([Cannot find libkrb, build may fail])
 			fi
 
-			LIBS="$LIBS -lkrb -ldes"
+			KLIBS="-lkrb -ldes"
 			AC_CHECK_LIB(resolv, dn_expand, , )
 			KRB4=yes
 			AC_DEFINE(KRB4)
@@ -661,6 +661,7 @@ AC_ARG_WITH(afs,
 		fi
 	]
 )
+LIBS="$LIBS $KLIBS"
 
 dnl Check whether user wants S/Key support
 AC_ARG_WITH(skey,
